# mauikit-accounts

./: .gitignore  .kde-ci.yml  CMakeLists.txt  Mainpage.dox  MauiKitAccountsConfig.cmake.in  MauiKitAccountsConfig.cmake.in.5  MauiKitAccountsConfig.cmake.in.6  Messages.sh  metainfo.yaml
examples/: AccountsMenuItem.qml  KirigamiExample.qml
po/ar/: mauikitaccounts.po
po/ca/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/ca@valencia/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/cs/: mauikitaccounts.po
po/de/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/en_GB/: mauikitaccounts.po
po/eo/: mauikitaccounts.po
po/es/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/eu/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/fi/: mauikitaccounts.po
po/fr/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/ga/: mauikitaccounts.po
po/gl/: mauikitaccounts.po
po/he/: mauikitaccounts.po
po/it/: mauikitaccounts.po
po/ja/: mauikitaccounts.po
po/ka/: mauikitaccounts.po
po/ko/: mauikitaccounts.po
po/lt/: mauikitaccounts.po
po/lv/: mauikitaccounts.po
po/nl/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/nn/: mauikitaccounts.po
po/pl/: mauikitaccounts.po
po/pt/: mauikitaccounts.po
po/pt_BR/: mauikitaccounts.po
po/ro/: mauikitaccounts.po
po/sa/: mauikitaccounts.po
po/sk/: mauikitaccounts.po
po/sl/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/sv/: mauikitaccounts.po
po/tr/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/ug/: mauikitaccounts.po
po/uk/: MauiKitAccountsPlugin.po  mauikitaccounts.po
po/zh_CN/: mauikitaccounts.po
po/zh_TW/: mauikitaccounts.po
src/: CMakeLists.txt  resources.qrc
src/code/: accounts_plugin.cpp  accounts_plugin.h  accountsdb.cpp  accountsdb.h  mauiaccounts.cpp  mauiaccounts.h  mauikitaccounts_plugin.cpp  mauikitaccounts_plugin.h  moduleinfo.cpp  moduleinfo.h
src/controls/: AccountsDialog.qml  AccountsMenuItem.qml  CredentialsDialog.qml  qmldir
src/controls.5/: AccountsDialog.qml  AccountsMenuItem.qml  CredentialsDialog.qml
src/controls.6/: AccountsDialog.qml  AccountsMenuItem.qml  CredentialsDialog.qml
